Duke/EarthquakeFilterStarterProgram/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\apache-csv.jar;C:\Program Files (x86)\BlueJ\lib\userlib\courserajava.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram
-d
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\doc
-encoding
UTF-8
-charset
UTF-8
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\Location.java
<---- end of javadoc command ---->
Loading source file F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\Location.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_144
Building tree for all the packages and classes...
Generating F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\doc\Location.html...
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\EarthQuakeClient2.java:36: error: illegal start of expression
    }
    ^
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\EarthQuakeClient2.java:36: error: ';' expected
    }
     ^
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\EarthQuakeClient2.java:38: error: illegal start of expression
    public void createCSV() {
           ^
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\EarthQuakeClient2.java:38: error: ';' expected
    public void createCSV() {
                         ^
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\EarthQuakeClient2.java:48: error: illegal start of expression
    public void dumpCSV(ArrayList<QuakeEntry> list) {
    ^
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\EarthQuakeClient2.java:48: error: illegal start of expression
    public void dumpCSV(ArrayList<QuakeEntry> list) {
           ^
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\EarthQuakeClient2.java:48: error: ';' expected
    public void dumpCSV(ArrayList<QuakeEntry> list) {
                       ^
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\EarthQuakeClient2.java:48: error: ';' expected
    public void dumpCSV(ArrayList<QuakeEntry> list) {
                                                  ^
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\EarthQuakeClient2.java:59: error: reached end of file while parsing
}
 ^
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\Location.java:44: warning - Tag @link: reference not found: LocationManager
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\Location.java:73: warning - @hide is an unknown tag.
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\Location.java:82: warning - @hide is an unknown tag.
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\Location.java:741: warning - Tag @link: reference not found: LocationManager
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\Location.java:537: warning - Tag @link: reference not found: android.os.SystemClock#elapsedRealtimeNanos
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\Location.java:537: warning - Tag @link: reference not found: LocationManager
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\Location.java:556: warning - Tag @link: reference not found: LocationManager
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\Location.java:573: warning - Tag @link: reference not found: LocationManager
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\Location.java:508: warning - Tag @link: reference not found: LocationManager
F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\Location.java:715: warning - Tag @link: reference not found: LocationManager
Generating F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\doc\package-frame.html...
Generating F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\doc\package-summary.html...
Generating F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\doc\allclasses-frame.html...
Generating F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\doc\allclasses-noframe.html...
Generating F:\Programovanie\JAVA\Coursera\EarthquakeFilterStarterProgram\doc\index.html...
9 errors
10 warnings
